--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,9 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap');
 @import 'libs/reset.scss';
 
 body {
   background-color: #FFFFFF;
   font-family: 'Roboto', sans-serif;
 }
+
+// h1,h2,h3,h4,p {
+//   font-family: 'Shrikhand', sans-serif;
+// }
 
 .menu {
   height: 60px;
@@ -45,6 +50,7 @@ body {
   padding: 2rem;
   text-align: center;
   background-color: rgb(250, 250, 250);
+  height: auto;
 
   &__title {
     font-size: 20px;
@@ -54,10 +60,87 @@ body {
 
   &__subtitle {
     font-weight: 300;
-    margin: 1.5rem 0;
+    // margin-top: 1rem;
+    // margin-bottom: 2rem;
+    padding-top: 1rem;
+    padding-bottom: 2rem;
+    color: #0E0E0E;
   }
 
-  &__btn {
+  &__restaurants {
+    padding-top: 1rem;
+    padding-bottom: 2rem;
+  }
+
+  &__button {
+    border: none;
+    padding: 1rem;
+    color: #FFFFFF;
+    font-weight: lighter;
+    border-radius: 2rem;
+    background: rgb(255,121,218);
+    background: linear-gradient(175deg, rgba(255,121,218,1) 0%, rgba(147,86,220,1) 100%);
     // @include button(primary);
+  }
+}
+
+.operation {
+  padding: 2rem 1rem;
+
+  &__title {
+    font-size: 20px;
+    font-weight: bold;
+  }
+
+  &__card {
+    position: relative;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    box-shadow: 0px 1px 10px #999;
+    margin: 1rem 0rem 1rem 1rem;
+    border-radius: 1rem;
+    background-color: #F6F6F6;
+    .operation__degustation {
+      display: flex;
+      align-items: center;
+      border-radius: 1rem;
+      background-color: #F5EDFF;
+      height: 100%;
+      width: 100%;
+    }
+  }
+  &__number {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    left: -10px;
+    font-size: 12px;
+    color: #FFFFFF;
+    background-color: #9356DC ;
+    padding: 0.3rem;
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
+  }
+  &__explain {
+    display: flex;
+    padding-left: 2rem;
+
+    .mobile__icone, .list__icone, .store__icone {
+      padding-right: 1rem;
+      width: 40px;
+    }
+    .mobile__icone, .list__icone {
+      color: #7E7E7E;
+    }
+    .store__icone {
+      color: #9356DC;
+    }
+  }
+  &__text {
+    font-size: 14px;
+    font-weight: 500;
   }
 }
