--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap");
 /* ! minireset.css v0.0.6 | Licence MIT | github.com/jgthms/minireset.css */
 html, body, p, ol, ul, li, dl, dt, dd, blockquote, figure, fieldset, legend, textarea, pre, iframe, hr, h1, h2, h3, h4, h5, h6 {
   margin: 0;
@@ -84,6 +85,7 @@ body {
   padding: 2rem;
   text-align: center;
   background-color: #fafafa;
+  height: auto;
 }
 .explore__title {
   font-size: 20px;
@@ -92,7 +94,80 @@ body {
 }
 .explore__subtitle {
   font-weight: 300;
-  margin: 1.5rem 0;
+  padding-top: 1rem;
+  padding-bottom: 2rem;
+  color: #0E0E0E;
+}
+.explore__restaurants {
+  padding-top: 1rem;
+  padding-bottom: 2rem;
+}
+.explore__button {
+  border: none;
+  padding: 1rem;
+  color: #FFFFFF;
+  font-weight: lighter;
+  border-radius: 2rem;
+  background: #ff79da;
+  background: linear-gradient(175deg, #ff79da 0%, #9356dc 100%);
+}
+
+.operation {
+  padding: 2rem 1rem;
+}
+.operation__title {
+  font-size: 20px;
+  font-weight: bold;
+}
+.operation__card {
+  position: relative;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  box-shadow: 0px 1px 10px #999;
+  margin: 1rem 0rem 1rem 1rem;
+  border-radius: 1rem;
+  background-color: #F6F6F6;
+}
+.operation__card .operation__degustation {
+  display: flex;
+  align-items: center;
+  border-radius: 1rem;
+  background-color: #F5EDFF;
+  height: 100%;
+  width: 100%;
+}
+.operation__number {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: -10px;
+  font-size: 12px;
+  color: #FFFFFF;
+  background-color: #9356DC;
+  padding: 0.3rem;
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+}
+.operation__explain {
+  display: flex;
+  padding-left: 2rem;
+}
+.operation__explain .mobile__icone, .operation__explain .list__icone, .operation__explain .store__icone {
+  padding-right: 1rem;
+  width: 40px;
+}
+.operation__explain .mobile__icone, .operation__explain .list__icone {
+  color: #7E7E7E;
+}
+.operation__explain .store__icone {
+  color: #9356DC;
+}
+.operation__text {
+  font-size: 14px;
+  font-weight: 500;
 }
 
 /*# sourceMappingURL=style.css.map */
