--- a/sass/style.scss
+++ b/sass/style.scss
@@ -144,3 +144,148 @@ body {
     font-weight: 500;
   }
 }
+
+.restaurants {
+  padding: 2rem 1rem;
+
+  &__cards {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    column-gap: 2rem;
+    row-gap: 2rem;
+
+    @media (min-width:64rem) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+
+  &__card {
+    background-color: white;
+    border-radius: 1rem;
+    position: relative;
+    text-decoration: none;
+    color: inherit;
+    display: block;
+    box-shadow: 0px 1px 10px #999;
+    overflow: hidden;
+    margin: 1rem 0;
+    &__images {
+      height: 12rem;
+      width: 100%;
+      border: transparent solid 0px;
+      border-radius: 1rem 1rem 0 0;
+      box-shadow: none;
+      object-fit: cover;
+    }
+  }
+
+
+  &__new {
+    background-color: #99E2D0;
+    color: #1F8766;
+    padding: 0.5rem;
+    border-radius: 0.125rem;
+    position: absolute;
+    top: 1rem;
+    right: 0.75rem;
+    font-size: 14px;
+
+  }
+
+  &__infos {
+    padding: 1rem;
+    position: relative;
+    display: flex;
+    align-items: center;
+  }
+
+  &__content {
+    flex: 1;
+  }
+
+  &__name {
+    margin: 0;
+    margin-bottom: 0.25rem;
+    font-weight: bold;
+  }
+
+  &__subtitle {
+    margin: 0;
+    font-weight: lighter;
+  }
+
+  // &__button {
+  //   height: 2rem;
+  //   width: 2rem;
+  //   background-color: transparent;
+  //   border: transparent 0px solid;
+  //   padding: 0;
+  //   display:flex;
+  //   align-items:center;
+  //   justify-content:center;
+  //   cursor: pointer;
+  //   position: relative;
+  //   background-color: black;
+
+  //   &:hover::before {
+  //     opacity: 1;
+  //   }
+
+  //   &::before {
+  //     opacity: 0;
+  //     transition: 0.5s;
+  //     content: "";
+  //     position: absolute;
+  //     top: 0;
+  //     left: 0;
+  //     height: 100%;
+  //     width: 100%;
+  //     background:linear-gradient(0deg,#9356dc,#ff79da);
+  //   }
+  // }
+
+  // .wishlist__btn {
+  //   height: 2rem;
+  //   width: 2rem;
+  //   background-color: transparent;
+  //   border: transparent 0px solid;
+  //   padding: 0;
+  //   display:flex;
+  //   align-items:center;
+  //   justify-content:center;
+
+  //   &__like {
+  //     transition-duration: .25s;
+  //     background-color: #f6f6f6;
+  //     position: absolute;
+  //     top: 0;
+  //     left: 0;
+  //     height: 100%;
+  //     width: 100%;
+  //     display:flex;
+  //     align-items:center;
+  //     justify-content:center;
+  //     mix-blend-mode: lighten;
+  //   }
+
+  //   &__like:hover {
+  //     .wishlist__btn__like {
+  //       &--noBg {
+  //         opacity: 0;
+  //       }
+  //     }
+  //   }
+  // }
+
+  &__button {
+    background-color: white!important;
+    border: hiddeny;
+    &:before {
+      outline: none;
+    }
+    &:focus{
+      background-color:yellow;
+      outline: blue auto 5px;
+    }
+  }
+}
