--- a/style.css
+++ b/style.css
@@ -170,4 +170,77 @@ body {
   font-weight: 500;
 }
 
+.restaurants {
+  padding: 2rem 1rem;
+}
+.restaurants__cards {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  column-gap: 2rem;
+  row-gap: 2rem;
+}
+@media (min-width: 64rem) {
+  .restaurants__cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+.restaurants__card {
+  background-color: white;
+  border-radius: 1rem;
+  position: relative;
+  text-decoration: none;
+  color: inherit;
+  display: block;
+  box-shadow: 0px 1px 10px #999;
+  overflow: hidden;
+  margin: 1rem 0;
+}
+.restaurants__card__images {
+  height: 12rem;
+  width: 100%;
+  border: transparent solid 0px;
+  border-radius: 1rem 1rem 0 0;
+  box-shadow: none;
+  object-fit: cover;
+}
+.restaurants__new {
+  background-color: #99E2D0;
+  color: #1F8766;
+  padding: 0.5rem;
+  border-radius: 0.125rem;
+  position: absolute;
+  top: 1rem;
+  right: 0.75rem;
+  font-size: 14px;
+}
+.restaurants__infos {
+  padding: 1rem;
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+.restaurants__content {
+  flex: 1;
+}
+.restaurants__name {
+  margin: 0;
+  margin-bottom: 0.25rem;
+  font-weight: bold;
+}
+.restaurants__subtitle {
+  margin: 0;
+  font-weight: lighter;
+}
+.restaurants__button {
+  background-color: white !important;
+  border: hidden;
+}
+.restaurants__button:before {
+  outline: none;
+}
+.restaurants__button:focus {
+  background-color: yellow;
+  outline: blue auto 5px;
+}
+
 /*# sourceMappingURL=style.css.map */
