--- a/sass/_navbar-footer.scss
+++ b/sass/_navbar-footer.scss
@@ -11,6 +11,29 @@
     width: 170px;
     height: 30px;
   }
+
+  // &__arrow {
+  //   color: blue;
+  // }
+}
+
+.header-menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  position: relative;
+
+  &__arrow {
+    position: absolute;
+    left: 2rem;
+    top: 0.4rem;
+    height: 2rem;
+    width: 2rem;
+    display: flex;
+    font-size: 1.2rem;
+    color: black;
+  }
 }
 
 .footer {
