--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,13 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap');
 @import 'libs/reset.scss';
-@import 'navbar-footer.scss';
+@import 'navbar-footer';
 
 body {
   background-color: #FFFFFF;
   font-family: 'Roboto', sans-serif;
 }
-
-
 
 .localisation {
   display: flex;
