--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap');
 @import 'libs/reset.scss';
 @import 'navbar-footer';
+@import 'restaurants-menu';
 
 body {
   background-color: #FFFFFF;
@@ -58,7 +59,7 @@ body {
     border: none;
     padding: 1rem;
     color: #FFFFFF;
-    font-weight: lighter;
+    font-weight: 400;
     border-radius: 2rem;
     background: rgb(255,121,218);
     background: linear-gradient(175deg, rgba(255,121,218,1) 0%, rgba(147,86,220,1) 100%);
