--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ html, body, p, ol, ul, li, dl, dt, dd, blockquote, figure, fieldset, legend, tex
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-size: 100%;
   font-weight: normal;
 }
 
@@ -115,6 +114,160 @@ td, th {
   margin-right: 0.5rem;
 }
 
+.restaurants-details-images {
+  max-width: 100%;
+  max-height: 32rem;
+  width: 100%;
+  object-fit: cover;
+}
+
+.details {
+  margin-top: -4rem;
+  border-radius: 2rem 2rem 0 0;
+  background-color: #f6f6f6;
+  z-index: 1;
+  position: relative;
+}
+.details__header {
+  padding: 1rem 2rem 0 1rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.details__title {
+  font-family: "Shrikhand", "cursive";
+  margin: 1rem 0;
+}
+.details__button {
+  height: 2rem;
+  width: 2rem;
+  background-color: transparent;
+  border: transparent 0px solid;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  position: relative;
+  background-color: black;
+}
+.details__button:hover::before {
+  opacity: 1;
+}
+.details__button::before {
+  opacity: 0;
+  transition: 0.5s;
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background: linear-gradient(0deg, #9356DC 0%, #FF79DA 100%);
+}
+.details__wishlist {
+  transition-duration: 0.25s;
+  background-color: #f6f6f6;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  mix-blend-mode: lighten;
+  border: hidden;
+}
+.details__button:hover .details__wishlist--noBg {
+  opacity: 0;
+}
+
+.sublevelsmenus {
+  display: grid;
+}
+@media (min-width: 64rem) {
+  .sublevelsmenus {
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 1rem;
+  }
+}
+
+.sublevelmenu {
+  max-width: 100%;
+  overflow: hidden;
+  padding: 0 1rem;
+}
+.sublevelmenu__title {
+  text-transform: uppercase;
+  position: relative;
+  padding: 2rem 0 0.5rem 0;
+  font-weight: 300;
+  font-size: 1.2rem;
+}
+.sublevelmenu__title::after {
+  content: "";
+  width: 3rem;
+  height: 0.2rem;
+  background-color: #99e2d0;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+.item {
+  background-color: white;
+  padding: 0.75rem;
+  display: flex;
+  border-radius: 0.75rem;
+  margin: 1rem 0;
+  box-shadow: 0.25rem 0.25rem 1rem rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  cursor: pointer;
+  max-width: 100%;
+}
+.item__header {
+  flex: 1;
+}
+.item__title {
+  font-weight: 500;
+  font-size: 1.2rem;
+  margin: 0;
+}
+.item__description {
+  margin: 0.4rem 0 0 0;
+  font-weight: lighter;
+  font-size: 1rem;
+}
+.item__price {
+  font-weight: 500;
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  padding-right: 0.5rem;
+}
+
+.command {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 8rem;
+}
+.command__restaurants {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+.command__button {
+  padding: 0.9rem 2.5rem;
+  border: none;
+  color: #FFFFFF;
+  font-weight: 400;
+  border-radius: 2rem;
+  background: #ff79da;
+  background: linear-gradient(175deg, #ff79da 0%, #9356dc 100%);
+}
+
 body {
   background-color: #FFFFFF;
   font-family: "Roboto", sans-serif;
@@ -163,7 +316,7 @@ body {
   border: none;
   padding: 1rem;
   color: #FFFFFF;
-  font-weight: lighter;
+  font-weight: 400;
   border-radius: 2rem;
   background: #ff79da;
   background: linear-gradient(175deg, #ff79da 0%, #9356dc 100%);
