--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap');
 @import 'libs/reset.scss';
+// @import 'libs/normalize';
 @import 'navbar-footer';
 @import 'restaurants-menu';
+@import 'heart';
 
 body {
   background-color: #FFFFFF;
@@ -43,8 +45,6 @@ body {
 
   &__subtitle {
     font-weight: 300;
-    // margin-top: 1rem;
-    // margin-bottom: 2rem;
     padding-top: 1rem;
     padding-bottom: 2rem;
     color: #0E0E0E;
@@ -195,85 +195,11 @@ body {
     margin: 0;
     margin-bottom: 0.25rem;
     font-weight: bold;
+    font-size: 1.2rem;
   }
 
   &__subtitle {
     margin: 0;
     font-weight: lighter;
-  }
-
-  // &__button {
-  //   height: 2rem;
-  //   width: 2rem;
-  //   background-color: transparent;
-  //   border: transparent 0px solid;
-  //   padding: 0;
-  //   display:flex;
-  //   align-items:center;
-  //   justify-content:center;
-  //   cursor: pointer;
-  //   position: relative;
-  //   background-color: black;
-
-  //   &:hover::before {
-  //     opacity: 1;
-  //   }
-
-  //   &::before {
-  //     opacity: 0;
-  //     transition: 0.5s;
-  //     content: "";
-  //     position: absolute;
-  //     top: 0;
-  //     left: 0;
-  //     height: 100%;
-  //     width: 100%;
-  //     background:linear-gradient(0deg,#9356dc,#ff79da);
-  //   }
-  // }
-
-  // .wishlist__btn {
-  //   height: 2rem;
-  //   width: 2rem;
-  //   background-color: transparent;
-  //   border: transparent 0px solid;
-  //   padding: 0;
-  //   display:flex;
-  //   align-items:center;
-  //   justify-content:center;
-
-  //   &__like {
-  //     transition-duration: .25s;
-  //     background-color: #f6f6f6;
-  //     position: absolute;
-  //     top: 0;
-  //     left: 0;
-  //     height: 100%;
-  //     width: 100%;
-  //     display:flex;
-  //     align-items:center;
-  //     justify-content:center;
-  //     mix-blend-mode: lighten;
-  //   }
-
-  //   &__like:hover {
-  //     .wishlist__btn__like {
-  //       &--noBg {
-  //         opacity: 0;
-  //       }
-  //     }
-  //   }
-  // }
-
-  &__button {
-    background-color: white!important;
-    border: hidden;
-    &:before {
-      outline: none;
-    }
-    &:focus{
-      background-color:yellow;
-      outline: blue auto 5px;
-    }
   }
 }
