--- a/sass/_heart.scss
+++ b/sass/_heart.scss
@@ -1,39 +1,38 @@
-.checkbox-heart {
-    // position: absolute;
-    // right : 45px;
-    // bottom: 30px;
-}
+// .checkbox-heart {
+//     // position: absolute;
+//     // right : 45px;
+//     // bottom: 30px;
+// }
 
 
 .fa-heart {
-    display: flex;
-    align-items: baseline;
-    font-size: 1.5em;
-    cursor: pointer;
-
+  display: flex;
+  align-items: baseline;
+  font-size: 1.5em;
+  cursor: pointer;
 }
 
 .checkbox-heart input[type="checkbox"], .checkbox-heart .check {
-    display: none;
+  display: none;
 }
 
 .checkbox-heart input[type="checkbox"]:checked~ .check {
-    display: inline-block;
+  display: inline-block;
 }
 
 .checkbox-heart input[type="checkbox"]:checked~ .uncheck {
-    display: none;
+  display: none;
 }
 
 .uncheck {
-    -webkit-text-fill-color: white;
-    -webkit-text-stroke-width: 1px;
-    -webkit-text-stroke-color: black;
+  -webkit-text-fill-color: white;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
 }
 
 .check {
-    background: linear-gradient(#9356DC, #FF79DA);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    -webkit-text-stroke-width: 0px;
+  background: $btn-grad;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke-width: 0px;
 }
