--- a/sass/loader/_poele.scss
+++ b/sass/loader/_poele.scss
@@ -113,13 +113,13 @@
 }
 
 .aliment--1 {
-  background-color: darken(#99E2D0, 30%);
+  background-color: darken($tertiaire-color, 30%);
 }
 
 .aliment--2 {
-  background-color: darken(#99E2D0, 20%);
+  background-color: darken($tertiaire-color, 20%);
 }
 
 .aliment--3 {
-  background-color: darken(#99E2D0, 40%);
+  background-color: darken($tertiaire-color, 40%);
 }
