--- a/all-import.css
+++ b/all-import.css
@@ -43,6 +43,184 @@ td, th {
   padding: 0;
 }
 
+body {
+  background-color: #FFFFFF;
+  font-family: "Roboto", sans-serif;
+}
+
+.localisation {
+  display: flex;
+  justify-content: center;
+  background-color: #EAEAEA;
+  height: 40px;
+  font-size: 14px;
+  padding: 1.25rem 1rem;
+  margin: 0;
+  text-align: center;
+  align-items: center;
+}
+.localisation__texte {
+  font-weight: 500;
+}
+.localisation__icone {
+  padding-right: 16px;
+}
+
+.explore {
+  padding: 2rem;
+  text-align: center;
+  background-color: #fafafa;
+  height: auto;
+}
+.explore__title {
+  font-size: 20px;
+  font-weight: 600;
+  margin: 0;
+}
+.explore__subtitle {
+  font-weight: 300;
+  padding-top: 1rem;
+  padding-bottom: 2rem;
+  color: #0E0E0E;
+}
+.explore__restaurants {
+  padding-top: 1rem;
+  padding-bottom: 2rem;
+}
+.explore__button {
+  border: none;
+  padding: 1rem;
+  color: #FFFFFF;
+  font-weight: 400;
+  border-radius: 2rem;
+  background: #ff79da;
+  background: linear-gradient(175deg, #ff79da 0%, #9356dc 100%);
+}
+
+.operation {
+  padding: 2rem 1rem;
+}
+.operation__title {
+  font-size: 20px;
+  font-weight: bold;
+}
+.operation__card {
+  position: relative;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  box-shadow: 0px 1px 10px #999;
+  margin: 1rem 0rem 1rem 1rem;
+  border-radius: 1rem;
+  background-color: #F6F6F6;
+}
+.operation__card:hover {
+  background-color: #F5EDFF;
+  color: #9356dc;
+  cursor: pointer;
+}
+.operation__card__icone {
+  padding-right: 1rem;
+  width: 40px;
+  color: #7E7E7E;
+}
+.operation__number {
+  position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  left: -10px;
+  font-size: 12px;
+  color: #FFFFFF;
+  background-color: #9356dc;
+  padding: 0.3rem;
+  width: 20px;
+  height: 20px;
+  border-radius: 10px;
+}
+.operation__explain {
+  display: flex;
+  padding-left: 2rem;
+}
+.operation__text {
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.restaurants {
+  padding: 2rem 1rem;
+}
+.restaurants__navigation {
+  text-decoration: none;
+  color: inherit;
+}
+.restaurants__cards {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  column-gap: 2rem;
+  row-gap: 2rem;
+}
+@media (min-width: 64rem) {
+  .restaurants__cards {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+.restaurants__card {
+  background-color: white;
+  border-radius: 1rem;
+  position: relative;
+  text-decoration: none;
+  color: inherit;
+  display: block;
+  box-shadow: 0px 1px 10px #999;
+  overflow: hidden;
+  margin: 1rem 0;
+}
+.restaurants__card__images {
+  height: 12rem;
+  width: 100%;
+  border: transparent solid 0px;
+  border-radius: 1rem 1rem 0 0;
+  box-shadow: none;
+  object-fit: cover;
+}
+.restaurants__new {
+  background-color: #99e2d0;
+  color: #1F8766;
+  padding: 0.5rem;
+  border-radius: 0.125rem;
+  position: absolute;
+  top: 1rem;
+  right: 0.75rem;
+  font-size: 14px;
+}
+.restaurants__infos {
+  padding: 1rem;
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+.restaurants__content {
+  flex: 1;
+}
+.restaurants__name {
+  margin: 0;
+  margin-bottom: 0.25rem;
+  font-weight: bold;
+  font-size: 1.2rem;
+}
+.restaurants__subtitle {
+  margin: 0;
+  font-weight: lighter;
+}
+.restaurants__heart {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 10%;
+  font-size: 30px;
+}
+
 .menu {
   height: 60px;
   display: flex;
@@ -194,6 +372,9 @@ td, th {
   overflow: hidden;
   cursor: pointer;
   max-width: 100%;
+  animation: itemFadeIn 0.5s;
+  animation-timing-function: linear;
+  animation-fill-mode: both;
 }
 .item__header {
   flex: 1;
@@ -216,7 +397,7 @@ td, th {
   padding-right: 0.5rem;
 }
 .item__confirmation {
-  background-color: #99E2D0;
+  background-color: #99e2d0;
   margin: -1rem -5rem -1rem 1rem;
   width: 4rem;
   display: flex;
@@ -242,7 +423,7 @@ td, th {
   transform: rotate(0);
 }
 .item__icon {
-  color: #99E2D0;
+  color: #99e2d0;
 }
 
 .command {
@@ -458,6 +639,11 @@ td, th {
     opacity: 0;
   }
 }
+@keyframes itemFadeIn {
+  0% {
+    transform: translateY(2rem);
+  }
+}
 .spinner-container {
   position: fixed;
   height: 100%;
@@ -511,7 +697,7 @@ td, th {
 .bubble {
   position: absolute;
   border-radius: 50%;
-  background: linear-gradient(173deg, #ff79da 0%, #d66cdb 39%, #ab5edc 85%, #9b59dc 100%);
+  background: linear-gradient(173deg, #ff79da 0%, #d66cdb 39%, #ab5edc 85%, #9356dc 100%);
   opacity: 1;
   animation: bubble 2000ms infinite ease-in;
 }
@@ -631,7 +817,7 @@ td, th {
   width: 5px;
   height: 5px;
   border-radius: 5px;
-  background: #9356DC;
+  background: #9356dc;
   /* Pick a color */
 }
 .loader .circle:nth-child(2) {
@@ -645,184 +831,6 @@ td, th {
 }
 .loader .circle:nth-child(5) {
   animation-delay: 960ms;
-}
-
-body {
-  background-color: #FFFFFF;
-  font-family: "Roboto", sans-serif;
-}
-
-.localisation {
-  display: flex;
-  justify-content: center;
-  background-color: #EAEAEA;
-  height: 40px;
-  font-size: 14px;
-  padding: 1.25rem 1rem;
-  margin: 0;
-  text-align: center;
-  align-items: center;
-}
-.localisation__texte {
-  font-weight: 500;
-}
-.localisation__icone {
-  padding-right: 16px;
-}
-
-.explore {
-  padding: 2rem;
-  text-align: center;
-  background-color: #fafafa;
-  height: auto;
-}
-.explore__title {
-  font-size: 20px;
-  font-weight: 600;
-  margin: 0;
-}
-.explore__subtitle {
-  font-weight: 300;
-  padding-top: 1rem;
-  padding-bottom: 2rem;
-  color: #0E0E0E;
-}
-.explore__restaurants {
-  padding-top: 1rem;
-  padding-bottom: 2rem;
-}
-.explore__button {
-  border: none;
-  padding: 1rem;
-  color: #FFFFFF;
-  font-weight: 400;
-  border-radius: 2rem;
-  background: #ff79da;
-  background: linear-gradient(175deg, #ff79da 0%, #9356dc 100%);
-}
-
-.operation {
-  padding: 2rem 1rem;
-}
-.operation__title {
-  font-size: 20px;
-  font-weight: bold;
-}
-.operation__card {
-  position: relative;
-  height: 60px;
-  display: flex;
-  align-items: center;
-  box-shadow: 0px 1px 10px #999;
-  margin: 1rem 0rem 1rem 1rem;
-  border-radius: 1rem;
-  background-color: #F6F6F6;
-}
-.operation__card:hover {
-  background-color: #F5EDFF;
-  color: #9356DC;
-  cursor: pointer;
-}
-.operation__card__icone {
-  padding-right: 1rem;
-  width: 40px;
-  color: #7E7E7E;
-}
-.operation__number {
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  left: -10px;
-  font-size: 12px;
-  color: #FFFFFF;
-  background-color: #9356DC;
-  padding: 0.3rem;
-  width: 20px;
-  height: 20px;
-  border-radius: 10px;
-}
-.operation__explain {
-  display: flex;
-  padding-left: 2rem;
-}
-.operation__text {
-  font-size: 14px;
-  font-weight: 500;
-}
-
-.restaurants {
-  padding: 2rem 1rem;
-}
-.restaurants__navigation {
-  text-decoration: none;
-  color: inherit;
-}
-.restaurants__cards {
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-  column-gap: 2rem;
-  row-gap: 2rem;
-}
-@media (min-width: 64rem) {
-  .restaurants__cards {
-    grid-template-columns: repeat(2, 1fr);
-  }
-}
-.restaurants__card {
-  background-color: white;
-  border-radius: 1rem;
-  position: relative;
-  text-decoration: none;
-  color: inherit;
-  display: block;
-  box-shadow: 0px 1px 10px #999;
-  overflow: hidden;
-  margin: 1rem 0;
-}
-.restaurants__card__images {
-  height: 12rem;
-  width: 100%;
-  border: transparent solid 0px;
-  border-radius: 1rem 1rem 0 0;
-  box-shadow: none;
-  object-fit: cover;
-}
-.restaurants__new {
-  background-color: #99E2D0;
-  color: #1F8766;
-  padding: 0.5rem;
-  border-radius: 0.125rem;
-  position: absolute;
-  top: 1rem;
-  right: 0.75rem;
-  font-size: 14px;
-}
-.restaurants__infos {
-  padding: 1rem;
-  position: relative;
-  display: flex;
-  align-items: center;
-}
-.restaurants__content {
-  flex: 1;
-}
-.restaurants__name {
-  margin: 0;
-  margin-bottom: 0.25rem;
-  font-weight: bold;
-  font-size: 1.2rem;
-}
-.restaurants__subtitle {
-  margin: 0;
-  font-weight: lighter;
-}
-.restaurants__heart {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 10%;
-  font-size: 30px;
 }
 
 .btn_heart {
@@ -852,4 +860,4 @@ body {
   opacity: 1;
 }
 
-/*# sourceMappingURL=style.css.map */
+/*# sourceMappingURL=all-import.css.map */
