--- a/sass/_base-component.scss
+++ b/sass/_base-component.scss
@@ -1,15 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&family=Shrikhand&display=swap');
-@import 'libs/reset.scss';
-@import 'variables';
-// @import 'libs/normalize';
-@import 'navbar-footer';
-@import 'restaurants-menu';
-@import 'heart';
-@import 'btnheart';
-@import 'animation';
-@import 'loader/poele';
-@import 'loader/windows';
-
 body {
   background-color: #FFFFFF;
   font-family: 'Roboto', sans-serif;
@@ -66,8 +54,8 @@ body {
     color: #FFFFFF;
     font-weight: 400;
     border-radius: 2rem;
-    background: rgb(255,121,218);
-    background: linear-gradient(175deg, rgba(255,121,218,1) 0%, rgba(147,86,220,1) 100%);
+    background: $secondary-color;
+    background: linear-gradient(175deg, $secondary-color 0%, $primary-color 100%);
     // @include button(primary);
   }
 }
@@ -91,7 +79,7 @@ body {
     background-color: #F6F6F6;
     &:hover {
       background-color: #F5EDFF;
-      color: #9356DC;
+      color: $primary-color;
       cursor:pointer;
     }
     &__icone {
@@ -109,7 +97,7 @@ body {
     left: -10px;
     font-size: 12px;
     color: #FFFFFF;
-    background-color: #9356DC ;
+    background-color: $primary-color ;
     padding: 0.3rem;
     width: 20px;
     height: 20px;
@@ -166,7 +154,7 @@ body {
 
 
   &__new {
-    background-color: #99E2D0;
+    background-color: $tertiaire-color;
     color: #1F8766;
     padding: 0.5rem;
     border-radius: 0.125rem;
@@ -207,8 +195,4 @@ body {
     width: 10%;
     font-size: 30px;
   }
-}
-
-.btn_heart{
-  @include btnheart;
 }
