--- a/sass/all-import.scss
+++ b/sass/all-import.scss
@@ -8,7 +8,7 @@
 @import 'heart';
 @import 'btnheart';
 @import 'animation.scss';
-@import 'loader/poele';
+// @import 'loader/poele';
 @import 'loader/windows';
 
 
