--- a/sass/_animation.scss
+++ b/sass/_animation.scss
@@ -9,130 +9,130 @@
 
 // Poêle Loader
 
-  $bg-bubble: linear-gradient(173deg, $secondary-color 0%, rgba(214,108,219,1) 39%, rgba(171,94,220,1) 85%, $primary-color 100%);
-  $bubble-timing: 2000ms;
-  $nb-bubble:6;
-  $bubble-delay: $bubble-timing / $nb-bubble;
+//   $bg-bubble: linear-gradient(173deg, $secondary-color 0%, rgba(214,108,219,1) 39%, rgba(171,94,220,1) 85%, $primary-color 100%);
+//   $bubble-timing: 2000ms;
+//   $nb-bubble:6;
+//   $bubble-delay: calc($bubble-timing / $nb-bubble);
 
-  $cook-timing: 1500ms;
-  $nb-food: 3;
-  $cook-delay: $cook-timing / $nb-food;
+//   $cook-timing: 1500ms;
+//   $nb-food: 3;
+//   $cook-delay: calc($cook-timing / $nb-food);
 
-@keyframes bubble {
-  0% {
-    transform: scale(0);
-    opacity: 0;
-  }
-  25% {
-    transform: scale(0.5) translate(0, 1);
-    opacity: 0.5;
-  }
-  50% {
-    transform: scale(1) translate(0, -20px);
-    opacity: 1;
-  }
-  75% {
-    transform: scale(1) translate(0, -30px);
-    opacity: 1;
-  }
-  100% {
-    transform: scale(1) translate(0, -60px);
-    opacity: 0;
-  }
-}
+// @keyframes bubble {
+//   0% {
+//     transform: scale(0);
+//     opacity: 0;
+//   }
+//   25% {
+//     transform: scale(0.5) translate(0, 1);
+//     opacity: 0.5;
+//   }
+//   50% {
+//     transform: scale(1) translate(0, -20px);
+//     opacity: 1;
+//   }
+//   75% {
+//     transform: scale(1) translate(0, -30px);
+//     opacity: 1;
+//   }
+//   100% {
+//     transform: scale(1) translate(0, -60px);
+//     opacity: 0;
+//   }
+// }
 
-@keyframes stove {
-  0% {
-    transform: translate(0, 1);
-  }
-  10% {
-    transform: translate(0, -10%) rotate(5deg);
-  }
-  20% {
-    transform: translate(0, 10%) rotate(-10deg);
-  }
-  40% {
-    transform: translate(0, -40%);
-  }
-  95% {
-    transform: rotate(5deg);
-  }
-  100% {
-    transform: translate(0,1) rotate(0deg);
-  }
-}
+// @keyframes stove {
+//   0% {
+//     transform: translate(0, 1);
+//   }
+//   10% {
+//     transform: translate(0, -10%) rotate(5deg);
+//   }
+//   20% {
+//     transform: translate(0, 10%) rotate(-10deg);
+//   }
+//   40% {
+//     transform: translate(0, -40%);
+//   }
+//   95% {
+//     transform: rotate(5deg);
+//   }
+//   100% {
+//     transform: translate(0,1) rotate(0deg);
+//   }
+// }
 
-@keyframes stove-handle {
-  0% {
-    transform: translate(0,1);
-  }
-  10% {
-    transform: translate(0, -10%) rotate(25deg);
-  }
-  20% {
-    transform: translate(0, 10%) rotate(-10deg);
-  }
-  40% {
-    transform: translate(0, -40%) rotate(10deg);
-  }
-  100% {
-    transform: translate(0,1);
-  }
-}
+// @keyframes stove-handle {
+//   0% {
+//     transform: translate(0,1);
+//   }
+//   10% {
+//     transform: translate(0, -10%) rotate(25deg);
+//   }
+//   20% {
+//     transform: translate(0, 10%) rotate(-10deg);
+//   }
+//   40% {
+//     transform: translate(0, -40%) rotate(10deg);
+//   }
+//   100% {
+//     transform: translate(0,1);
+//   }
+// }
 
-@keyframes food-2 {
-  0% {
-    transform: translate(0);
-  }
-  10% {
-    transform: translate(55px, -1px);
-  }
-  20% {
-    transform: translate(63px, -5px) rotate(0deg);
-  }
-  28% {
-    transform: translate(70px, -50px);
-  }
-  35% {
-    transform: translate(68px, -55px) rotate(180deg);
-  }
-  40% {
-    transform: translate(60px, -60px);
-  }
-  45% {
-    transform: translate(52px, -65px) rotate(360deg);
-  }
-  50% {
-    transform: translate(42px, -69px);
-  }
-  55% {
-    transform: translate(31px, -67px);
-  }
-  60% {
-    transform: translate(22px, -64px) rotate(-180deg);
-  }
-  65% {
-    transform: translate(15px, -60px);
-  }
-  70% {
-    transform: translate(6px, -54px) ;
-  }
-  75% {
-    transform: translate(-1px, -47px) rotate(-90deg);
-  }
-  80% {
-    transform: translate(-7px, -36px);
-  }
-  85% {
-    transform: translate(-9px, -24px) rotate(0deg);
-  }
-  90% {
-    transform: translate(-7px, -8px) rotate(90deg);
-  }
-  100% {
-    transform: translate(0, 0);
-  }
-}
+// @keyframes food-2 {
+//   0% {
+//     transform: translate(0);
+//   }
+//   10% {
+//     transform: translate(55px, -1px);
+//   }
+//   20% {
+//     transform: translate(63px, -5px) rotate(0deg);
+//   }
+//   28% {
+//     transform: translate(70px, -50px);
+//   }
+//   35% {
+//     transform: translate(68px, -55px) rotate(180deg);
+//   }
+//   40% {
+//     transform: translate(60px, -60px);
+//   }
+//   45% {
+//     transform: translate(52px, -65px) rotate(360deg);
+//   }
+//   50% {
+//     transform: translate(42px, -69px);
+//   }
+//   55% {
+//     transform: translate(31px, -67px);
+//   }
+//   60% {
+//     transform: translate(22px, -64px) rotate(-180deg);
+//   }
+//   65% {
+//     transform: translate(15px, -60px);
+//   }
+//   70% {
+//     transform: translate(6px, -54px) ;
+//   }
+//   75% {
+//     transform: translate(-1px, -47px) rotate(-90deg);
+//   }
+//   80% {
+//     transform: translate(-7px, -36px);
+//   }
+//   85% {
+//     transform: translate(-9px, -24px) rotate(0deg);
+//   }
+//   90% {
+//     transform: translate(-7px, -8px) rotate(90deg);
+//   }
+//   100% {
+//     transform: translate(0, 0);
+//   }
+// }
 
 // –––––––––––––––––————————————————————————————————
 
